Add list commits API
