# docs/swagger.json
@@ -180,6 +180,26 @@
                 }
             }
         },
+        "/v1/pipeline/template": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "pipeline"
+                ],
+                "summary": "List pipeline templates",
+                "operationId": "14",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/controller.ListPipelineTemplateResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/v1/proj": {
             "get": {
                 "produces": [
@@ -217,13 +237,6 @@
                 "summary": "create project",
                 "operationId": "8",
                 "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "Organization Id",
-                        "name": "orgId",
-                        "in": "query",
-                        "required": true
-                    },
                     {
                         "description": "Project",
                         "name": "project",
@@ -403,6 +416,51 @@
                 }
             }
         },
+        "/v1/source/{sourceId}/commits": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "installation"
+                ],
+                "summary": "List user installation commits",
+                "operationId": "15",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Source Id",
+                        "name": "sourceId",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Branch",
+                        "name": "branch",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Number of commits per page",
+                        "name": "perPage",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Page number to fetch",
+                        "name": "page",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": ""
+                    }
+                }
+            }
+        },
         "/v1/user/installations": {
             "get": {
                 "produces": [
@@ -451,6 +509,9 @@
             "properties": {
                 "name": {
                     "type": "string"
+                },
+                "orgId": {
+                    "type": "integer"
                 }
             }
         },
@@ -530,6 +591,17 @@
                 }
             }
         },
+        "controller.ListPipelineTemplateResponse": {
+            "type": "object",
+            "properties": {
+                "templateList": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/controller.PipelineTemplate"
+                    }
+                }
+            }
+        },
         "controller.ListProjResponse": {
             "type": "object",
             "properties": {
@@ -552,6 +624,14 @@
                     "items": {
                         "type": "integer"
                     }
+                }
+            }
+        },
+        "controller.PipelineTemplate": {
+            "type": "object",
+            "properties": {
+                "meta": {
+                    "$ref": "#/definitions/repository.PipelineTemplate"
                 }
             }
         },
@@ -603,6 +683,29 @@
                 },
                 "id": {
                     "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "updatedAt": {
+                    "type": "string"
+                }
+            }
+        },
+        "repository.PipelineTemplate": {
+            "type": "object",
+            "properties": {
+                "content": {
+                    "type": "string"
+                },
+                "createdAt": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "language": {
+                    "type": "string"
                 },
                 "name": {
                     "type": "string"
